--- a/index.html
+++ b/index.html
@@ -4,49 +4,66 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Landing Page</title>
 </head>
 
 <body>
     <header>
-        <nav>
-            <img src="https://placekitten.com/100/100" alt="Website Logo">
-            <ul>
-                <li><a href="#">Header Link One</a></li>
-                <li><a href="#">Header Link Two</a></li>
-                <li><a href="#">Header Link Three</a></li>
+        <nav class="navbar">  
+            <img class="logo" src="https://placekitten.com/100/100" alt="Website Logo">
+            <ul class="nav-links">
+                <li class="nav-item"><a href="#">Header Link One</a></li>
+                <li class="nav-item"><a href="#">Header Link Two</a></li>
+                <li class="nav-item"><a href="#">Header Link Three</a></li>
             </ul>
         </nav>
     </header>
-    <section>
-        <h1>This website is awesome</h1>
-        <p>This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast</p>
-        <form action="#">
-            <input type="submit" value="Sign Up"/>
-        </form>
-        <img src="https://placekitten.com/800/300" alt="Random Image"/>
+    <section class="hero-container">
+        <div class="hero-content">
+            <h1>This website is awesome</h1>
+            <p>This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast.</p>
+            <button class="button" type="button">Sign Up!</button>
+        </div>
+        <div class="hero-img">
+            <img src="https://placekitten.com/600/300" alt="Random Image"/>
+        </div>
     </section>
-    <section>
+    <section class="information-container">
         <h2>Some random information</h2>
-        <img src="https://placekitten.com/300/300" alt="Random Image"/>
-        <span>This is some subtext under an image</span>
-        <img src="https://placekitten.com/300/300" alt="Random Image"/>
-        <span>This is some subtext under an image</span>
-        <img src="https://placekitten.com/300/300" alt="Random Image"/>
-        <span>This is some subtext under an image</span>
-        <img src="https://placekitten.com/300/300" alt="Random Image"/>
-        <span>This is some subtext under an image</span>
+        <div class="information-grid">
+            <div class="information-content">
+                <img class="information-img" src="https://placekitten.com/300/300" alt="Random Image"/>
+                <span class = "information-text">This is some subtext under an image</span>
+            </div>
+            <div class="information-content">
+                <img class="information-img" src="https://placekitten.com/300/300" alt="Random Image"/>
+                <span class = "information-text">This is some subtext under an image</span>
+            </div>
+            <div class="information-content">
+                <img class="information-img" src="https://placekitten.com/300/300" alt="Random Image"/>
+                <span class = "information-text">This is some subtext under an image</span>
+            </div>
+            <div class="information-content">
+                <img class="information-img" src="https://placekitten.com/300/300" alt="Random Image"/>
+                <span class = "information-text">This is some subtext under an image</span>
+            </div>
+        </div>
     </section>
-    <section>
-        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filing up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-        <span>-Thor, God of Thunder</span>
+    <section class="quote-container">
+        <p class="quote-paragraph">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filing up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        <p class="quote-author">-Thor, God of Thunder</p>
     </section>
-    <section>
-        <h3>Call to action! It's time!</h3>
-        <p>Sign up for our product by clicking that button right over there!</p>
-        <form action="#">
-            <input type="submit" value="Sign Up"/>
-        </form>
+    <section class="signup-container">
+        <div class="signup-inner">
+            <div class="signup-text">
+                <h3>Call to action! It's time!</h3>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <div class="signup-button">
+                <button class="button" type="button">Sign Up!</button>
+            </div>
+        </div>
     </section>
     <footer>
         <span>Copyright &copy; The Odin Project 2022</span>
